--- a/templates/base.html
+++ b/templates/base.html
@@ -450,6 +450,12 @@ textarea {
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
+                {% if user.is_authenticated %}
+                {% if user.user_type == 'doctor' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'create_blog_post' %}">Create Blog</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'doctor_dashboard' %}">Doctor Dashboard</a>
                 </li>
