--- a/templates/base.html
+++ b/templates/base.html
@@ -456,6 +456,9 @@ textarea {
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'patient_dashboard' %}">Patient Dashboard</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create_blog' %}">Create Blog</a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 {% if user.is_authenticated %}
@@ -491,13 +494,14 @@ textarea {
         <!-- Content from child templates will be inserted here -->
         {% endblock %}
     </div>
-
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy;  2024 My Hospital App. All rights reserved.Developed by Ambreesh Kumar</p>
-    </footer>
-    <p>
-        <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
-    </p>
+    <div>
+        <footer class="bg-dark text-white text-center py-3">
+            <p>&copy;  2024 My Hospital App. All rights reserved.Developed by Ambreesh Kumar</p>
+        </footer>
+        <p>
+            <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+        </p>
+    </div>    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
