--- a/templates/base.html
+++ b/templates/base.html
@@ -457,7 +457,7 @@ textarea {
                     <a class="nav-link" href="{% url 'patient_dashboard' %}">Patient Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create_blog' %}">Create Blog</a>
+                    <a class="nav-link" href="{% url 'create_blog_post' %}">Create Blog</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
