--- a/templates/base.html
+++ b/templates/base.html
@@ -458,6 +458,7 @@ textarea {
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'create_blog_post' %}">Create Blog</a>
+                    <a class="nav-link" href="{% url 'Patient_blogs' %}">View Blog</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
