--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -33,7 +33,11 @@ Patient Dashboard - Hospital App
             </div>
         </div>
     </div>
-
+    <div class="row mb-4">
+        <div class="col-md-12">
+            <a class="nav-link" href="{% url 'Patient_blog' %}">Patient Blog</a>
+        </div>
+    </div>
     <!-- Appointments and Medical History sections -->
     <!-- Add your existing code for appointments and medical history here -->
 
