--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -34,6 +34,13 @@ Patient Dashboard - Hospital App
         </div>
     </div>
 
+    <div class="row mb-4">
+        <div class="col-md-12 text-center">
+            <a href="{% url 'view_blog' %}" class="btn btn-secondary">View Blog</a>
+        </div>
+    </div>
+
+
     <!-- Appointments and Medical History sections -->
     <!-- Add your existing code for appointments and medical history here -->
 
