--- a/templates/view_blog.html
+++ b/templates/view_blog.html
@@ -1,29 +1,23 @@
 {% extends 'base.html' %}
 
-{% block title %}
-View Blog - Hospital App
-{% endblock %}
+{% block title %}View Blog Posts{% endblock %}
 
 {% block content %}
 <div class="container mt-4">
-    <div class="row">
-        <div class="col-md-12">
-            <h2>Blog Posts</h2>
-            {% for category, posts in filtered_posts.items %}
-                <h3>{{ category.name }}</h3>
-                {% for post in posts %}
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ post.title }}</h5>
-                            <p class="card-text">{{ post.content|truncatewords:50 }}</p>
-                            <a href="{% url 'create_blog_post' post.id %}" class="btn btn-primary">Read More</a>
-                        </div>
-                    </div>
-                {% empty %}
-                    <p>No blog posts available in this category.</p>
-                {% endfor %}
+    <h2>Blog Posts</h2>
+    {% for category in categories %}
+        <h3>{{ category.name }}</h3>
+        <div class="list-group mb-4">
+            {% for post in category.blogpost_set.all %}
+                {% if not post.is_draft %}
+                    <a href="{% url 'post_detail' post.id %}" class="list-group-item list-group-item-action">
+                        <h5 class="mb-1">{{ post.title }}</h5>
+                        <p class="mb-1">{{ post.content|truncatewords:30 }}</p>
+                        <small class="text-muted">By {{ post.author.get_full_name }} on {{ post.created_at }}</small>
+                    </a>
+                {% endif %}
             {% endfor %}
         </div>
-    </div>
+    {% endfor %}
 </div>
 {% endblock %}
