--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -78,9 +78,13 @@ Doctor Dashboard
         </div>
     </div>
     <div class="row mb-4">
-        <div class="col-md-12 text-center">
-            <a href="{% url 'doctor_blogs' %}" class="btn btn-dark">View Blog</a>
+        <div class="col-md-6">
+            <h3>My Blog Posts</h3>
+            <a href="{% url 'doctor_blogs' %}" class="btn btn-primary">View My Blog Posts</a>
+        </div>
+        <div class="col-md-6">
+            <h3>Create New Blog Post</h3>
+            <a href="{% url 'create_blog' %}" class="btn btn-dark">Create Blog Post</a>
         </div>
     </div>
-</div>
 {% endblock %}
