--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -3,6 +3,20 @@
 {% block title %}Post Detail{% endblock %}
 
 {% block content %}
-<h1>{{ post.title }}</h1>
-<p>{{ post.content }}</p>
+<div class="container mt-4">
+    <!-- Blog Post Detail -->
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <h1 class="display-4">{{ post.title }}</h1>
+            <p class="text-muted">By {{ post.author.get_full_name }} on {{ post.created_at|date:"F j, Y" }}</p>
+            <hr>
+            <div class="content">
+                <p>{{ post.content|linebreaks }}</p>
+            </div>
+            <hr>
+            <!-- Optional: Add a back button or related content -->
+            <a href="{% url 'view_blog' %}" class="btn btn-secondary mt-3">Back to Blog</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
