--- a/templates/category_blogs.html
+++ b/templates/category_blogs.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 
 {% block title %}{{ category.name }} Blogs{% endblock %}
 
@@ -19,5 +19,50 @@
             </div>
         {% endfor %}
     </div>
+</div>
+{% endblock %} {% endcomment %}
+
+{% extends 'base.html' %}
+
+{% block title %}Create Blog Post{% endblock %}
+
+{% block content %}
+<div class="container mt-4">
+    <h2>Create New Blog Post</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        
+        <div class="form-group">
+            <label for="id_title">Title:</label>
+            {{ form.title }}
+        </div>
+        
+        <div class="form-group">
+            <label for="id_image">Image:</label>
+            {{ form.image }}
+        </div>
+        
+        <div class="form-group">
+            <label for="id_category">Category:</label>
+            {{ form.category }}
+        </div>
+        
+        <div class="form-group">
+            <label for="id_summary">Summary:</label>
+            {{ form.summary }}
+        </div>
+        
+        <div class="form-group">
+            <label for="id_content">Content:</label>
+            {{ form.content }}
+        </div>
+        
+        <div class="form-check">
+            {{ form.is_draft }}
+            <label class="form-check-label" for="id_is_draft">Is Draft</label>
+        </div>
+        
+        <button type="submit" class="btn btn-dark mt-3">Post</button>
+    </form>
 </div>
 {% endblock %}
