--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -77,10 +77,12 @@ Doctor Dashboard
             {% endif %}
         </div>
     </div>
+    
     <div class="row mb-4">
         <div class="col-md-6">
             <h3>My Blog Posts</h3>
             <a href="{% url 'doctor_blogs' %}" class="btn btn-primary">View My Blog Posts</a>
         </div>
+    </div>
 </div>
 {% endblock %}
