--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,6 +25,22 @@ Sign Up
                         </div>
 
                         <div class="form-group mb-3">
+                            <label for="{{ form.first_name.id_for_label }}" class="form-label font-weight-bold text-primary">First Name</label>
+                            <input type="text" name="{{ form.first_name.name }}" id="{{ form.first_name.id_for_label }}" class="form-control rounded-pill" value="{{ form.first_name.value|default_if_none:'' }}">
+                            {% if form.first_name.errors %}
+                                <small class="text-danger">{{ form.first_name.errors }}</small>
+                            {% endif %}
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label for="{{ form.last_name.id_for_label }}" class="form-label font-weight-bold text-primary">Last Name</label>
+                            <input type="text" name="{{ form.last_name.name }}" id="{{ form.last_name.id_for_label }}" class="form-control rounded-pill" value="{{ form.last_name.value|default_if_none:'' }}">
+                            {% if form.last_name.errors %}
+                                <small class="text-danger">{{ form.last_name.errors }}</small>
+                            {% endif %}
+                        </div>
+
+                        <div class="form-group mb-3">
                             <label for="{{ form.username.id_for_label }}" class="form-label font-weight-bold text-primary">Username</label>
                             <input type="text" name="{{ form.username.name }}" id="{{ form.username.id_for_label }}" class="form-control rounded-pill" value="{{ form.username.value|default_if_none:'' }}">
                             {% if form.username.errors %}
