--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -23,7 +23,7 @@ Patient Dashboard - Hospital App
             <div class="list-group">
                 {% for doctor in doctors %}
                 <div class="list-group-item">
-                    <h5 class="mb-1">{{ doctor.user.get_full_name }}</h5>
+                    <h5 class="mb-1">{{ doctor.first_name }} {{ doctor.last_name }}</h5>
                     <p class="mb-1">Specialty: {{ doctor.specialty }}</p>
                     <a href="{% url 'book_appointment' doctor.id %}" class="btn btn-primary">Book Appointment</a>
                 </div>
@@ -37,6 +37,8 @@ Patient Dashboard - Hospital App
     <div class="row mb-4">
         <div class="col-md-12 text-center">
             <a href="{% url 'view_blog' %}" class="btn btn-dark">View Blog</a>
+            <a href="{% url 'view_appointments' %}" class="btn btn-secondary">View Appointments</a>
+            <a href="{% url 'view_medical_history' %}" class="btn btn-secondary">View Medical History</a>
         </div>
     </div>
 
