--- a/templates/book_appointment.html
+++ b/templates/book_appointment.html
@@ -1,3 +1,4 @@
+<!-- templates/book_appointment.html -->
 {% extends 'base.html' %}
 
 {% block content %}
@@ -12,7 +13,18 @@
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        <div class="form-group">
+                            <label for="specialty">Specialty</label>
+                            {{ form.specialty }}
+                        </div>
+                        <div class="form-group">
+                            <label for="date">Date of Appointment</label>
+                            {{ form.date }}
+                        </div>
+                        <div class="form-group">
+                            <label for="start_time">Start Time of Appointment</label>
+                            {{ form.start_time }}
+                        </div>
                         <button type="submit" class="btn btn-primary btn-block rounded-pill">Confirm Appointment</button>
                     </form>
                 </div>
