--- a/templates/appointment_details.html
+++ b/templates/appointment_details.html
@@ -5,7 +5,7 @@
     <h1 class="text-center mb-4">Appointment Details</h1>
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">Dr. {{ appointment.doctor.first_name }} {{ appointment.doctor.last_name }}</h5>
+            <h5 class="card-title">Dr. {{ appointment.doctor.user.first_name }} {{ appointment.doctor.user.last_name }}</h5>
             <p class="card-text">Specialty: {{ appointment.specialty }}</p>
             <p class="card-text">Appointment Date: {{ appointment.date }}</p>
             <p class="card-text">Start Time: {{ appointment.start_time }}</p>
