--- a/templates/appointment_confirmation.html
+++ b/templates/appointment_confirmation.html
@@ -6,7 +6,7 @@
     <h1 class="text-center mb-4">Appointment Confirmation</h1>
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">Dr. {{ appointment.doctor.get_full_name }}</h5>
+            <h5 class="card-title">Dr. {{ appointment.doctor.first_name }} {{ appointment.doctor.last_name }}</h5>
             <p class="card-text">Specialty: {{ appointment.specialty }}</p>
             <p class="card-text">Date: {{ appointment.date }}</p>
             <p class="card-text">Start Time: {{ appointment.start_time }}</p>
