--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -9,29 +9,7 @@ Doctor Dashboard
     <h1>Doctor Dashboard</h1>
     <h3>Welcome, Dr. {{ user.first_name }} {{ user.last_name }}!</h3>
     <a href="{% url 'add_doctor' %}" class="btn btn-primary">Add Doctor</a>
-    
-
-    <!-- Appointments Section -->
-    <div class="row mb-4">
-        <div class="col-md-12">
-            <h3>Your Appointments</h3>
-            {% if appointments %}
-                <div class="list-group">
-                    {% for appointment in appointments %}
-                        <div class="list-group-item">
-                            <h5 class="mb-1">Appointment with {{ appointment.patient.get_full_name }}</h5>
-                            <p class="mb-1">Specialty: {{ appointment.specialty }}</p>
-                            <p class="mb-1">Date: {{ appointment.date }}</p>
-                            <p class="mb-1">Start Time: {{ appointment.start_time }}</p>
-                            <p class="mb-1">End Time: {{ appointment.end_time }}</p>
-                        </div>
-                    {% endfor %}
-                </div>
-            {% else %}
-            <p>No appointments found.</p>
-            {% endif %}
-        </div>
-    </div>
+    <a href="{% url 'view_appointment' appointment.id %}" class="btn btn-info">View</a>
 
     <!-- Doctors List Section -->
     <div class="card mt-4">
