--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -9,7 +9,13 @@ Doctor Dashboard
     <h1>Doctor Dashboard</h1>
     <h3>Welcome, Dr. {{ user.first_name }} {{ user.last_name }}!</h3>
     <a href="{% url 'add_doctor' %}" class="btn btn-primary">Add Doctor</a>
-    <a href="{% url 'view_appointment' appointment.id %}" class="btn btn-primary">View Appointment</a>
+    {% for appointment in appointments %}
+    {% if appointment.id %}
+        <a href="{% url 'view_appointment' appointment.id %}">View Appointment</a>
+    {% else %}
+        <p>Invalid appointment ID</p>
+    {% endif %}
+    {% endfor %}
 
     <!-- Doctors List Section -->
     <div class="card mt-4">
